--- a/vt/specs/character/animation-1.yaml
+++ b/vt/specs/character/animation-1.yaml
@@ -33,12 +33,12 @@ resources:
       height: 1080
     fk4jla893:
       fileId: char_sprite_1
-      width: 200
-      height: 200
+      width: 553
+      height: 865
     3fjaklj34:
       fileId: char_sprite_2
-      width: 200
-      height: 200
+      width: 553
+      height: 865
 
   characters:
     alkjf3ia:
@@ -52,14 +52,20 @@ resources:
 
   transforms:
     iasdlf:
-      x: 100
-      y: 300
+      x: 480
+      y: 1080
+      anchorX: 0.5
+      anchorY: 1
     a32kf3:
-      x: 500
-      y: 300
+      x: 1440
+      y: 1080
+      anchorX: 0.5
+      anchorY: 1
     t_center:
       x: 960
-      y: 540
+      y: 1080
+      anchorX: 0.5
+      anchorY: 1
 
   tweens:
     slide_in:
