--- a/vt/specs/character/basic.yaml
+++ b/vt/specs/character/basic.yaml
@@ -20,12 +20,12 @@ resources:
       height: 1080
     fk4jla893:
       fileId: char_sprite_1
-      width: 200
-      height: 200
+      width: 553
+      height: 865
     3fjaklj34:
       fileId: char_sprite_2
-      width: 50
-      height: 50
+      width: 553
+      height: 865
   layouts:
     base1:
       elements:
@@ -40,11 +40,15 @@ resources:
                 nextLine: {}
   transforms:
     iasdlf:
-      x: 100
-      y: 300
+      x: 480
+      y: 1080
+      anchorX: 0.5
+      anchorY: 1
     a32kf3:
-      x: 500
-      y: 300
+      x: 1440
+      y: 1080
+      anchorX: 0.5
+      anchorY: 1
   characters:
     alkjf3ia:
       name: "Abc"
