--- a/vt/specs/character/custom-position.yaml
+++ b/vt/specs/character/custom-position.yaml
@@ -1,3 +1,6 @@
+---
+title: "Character Custom Position"
+---
 l10n:
   packages:
     eklekfjwalefj:
@@ -17,12 +20,12 @@ resources:
       height: 1080
     fk4jla893:
       fileId: char_sprite_1
-      width: 200
-      height: 200
+      width: 553
+      height: 865
     3fjaklj34:
       fileId: char_sprite_2
-      width: 50
-      height: 50
+      width: 553
+      height: 865
   layouts:
     base1:
       elements:
@@ -37,11 +40,15 @@ resources:
                 nextLine: {}
   transforms:
     iasdlf:
-      x: 100
-      y: 300
+      x: 480
+      y: 1080
+      anchorX: 0.5
+      anchorY: 1
     a32kf3:
-      x: 500
-      y: 300
+      x: 1440
+      y: 1080
+      anchorX: 0.5
+      anchorY: 1
   characters:
     alkjf3ia:
       name: "Abc"
@@ -65,8 +72,8 @@ story:
                 character:
                   items:
                     - id: "laj389d"
-                      x: 500
-                      y: 300
+                      x: 1440
+                      y: 1080
                       transformId: iasdlf
                       sprites:
                         - id: base
@@ -80,8 +87,8 @@ story:
                 character:
                   items:
                     - id: "laj389d"
-                      x: 100
-                      y: 300
+                      x: 480
+                      y: 1080
                       transformId: a32kf3
                       sprites:
                         - id: base
